--- a/style.css
+++ b/style.css
@@ -35,11 +35,20 @@
 /************************* YOUR SETTINGS *************************/
 
 /* add your css here, feel free to use comments and order them logically for better readability */
+
+@import url('https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap');
+:root{
+   background-color: aliceblue;
+   --font-main: 'Milton Tattoo', cursive;
+
+}
+
 body {
+   font-family: var(--font-main)
 display: grid;
 grid-template-areas: 
-"header nav"
-"main main"
+"header header"
+"nav main"
 "footer footer";
 grid-template-columns: 1fr 1fr;
 grid-template-rows: 120px 1fr 60px; 
