--- a/style.css
+++ b/style.css
@@ -36,6 +36,17 @@
 
 /* add your css here, feel free to use comments and order them logically for better readability */
 
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+:root {
+   background-color: #c5d5ea;
+   color: rgb(0, 0, 0);
+   padding: 0%;
+   border-radius: 0%;
+   text-align: center;
+   font-size: large;
+}
+
+
 body {
 display: grid;
 grid-template-areas: 
