--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 :root {
-   background-color: #c5d5ea;
+   background-color: #ebf2fa;
    color: rgb(0, 0, 0);
    padding: 0%;
    border-radius: 0%;
@@ -48,19 +48,37 @@
 
 
 body {
+    font-family: "Bubblegum Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 display: grid;
 grid-template-areas: 
 "header header"
 "nav main"
 "footer footer";
-grid-template-columns: 1fr 1fr;
+grid-template-columns: 1fr 8fr;
 grid-template-rows: 120px 1fr 60px; 
 }
 header {
 grid-area: header; 
+text-align: center;
 }
 nav {
 grid-area: nav; 
+text-align: center;
+background-color: rgb(200, 223, 243);
+border-radius: 13px;
+height: 750px;
+}
+nav ul {
+   list-style: none;
+}
+nav a{
+   color: rgb(110, 133, 168);
+   text-decoration: none;
+}
+nav a:hover {
+   color: rgb(7, 153, 221);
 }
 main {
 grid-area: main; 
