--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ nav ul {
    margin: 10px;
    padding: 10px;
    gap: 16px;
-   height: 1250px;
+   height: auto;
    list-style: none;
 }
 nav a{
@@ -107,7 +107,7 @@ grid-area: main;
 }
 
 .balk {
-   margin-right: 150px;
+   margin-right: 75px;
    background-color: rgb(157, 199, 235);
 }
 
@@ -120,6 +120,12 @@ padding: 15px;
   font-weight: <weight>;
   font-style: normal;
 }
+footer a{
+   color:#7392B7 ;
+}
+footer a:hover {
+   color: rgb(248, 235, 209);
+}
 
 header img {
 position: absolute;
@@ -129,7 +135,7 @@ height: 80px;
 border-radius: 16px;
 }
 main img {
-   margin-right: 75px;
+   margin-right: 50px;
    border-radius: 16px;
    align-items: center;
 }
@@ -140,7 +146,7 @@ main img:hover {
 main h3 {
    background-color: #C5D5EA;
    padding: 10px;
-   margin-right: 150px;
+   margin-right: 75px;
    border-radius: 16px;
 }
 h3 {
@@ -151,14 +157,16 @@ table {
 border-collapse: collapse;
 margin-left: auto; 
 margin-right: auto;
+background-color: #bad5f9;
 }
 thead th {
-background-color: #74A9CB;
+background-color: #759EB8;
 color: white
 }
 tbody td {
-border: 1px solid #74A9CB;
+border: 1px solid #759EB8;
 }
+
 #C5D5EA
 #759EB8
 #7392B7
