--- a/style.css
+++ b/style.css
@@ -101,8 +101,7 @@ nav a:hover {
 main {
 grid-area: main; 
   font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -116,8 +115,7 @@ grid-area: footer;
 background-color: rgb(157, 199, 235);
 padding: 15px;
   font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: 400;
   font-style: normal;
 }
 footer a{
@@ -166,9 +164,3 @@ color: white
 tbody td {
 border: 1px solid #759EB8;
 }
-
-#C5D5EA
-#759EB8
-#7392B7
-#B3C5D7
-#D8E1E9
